--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,4 +40,6 @@ en:
       first_name: "Your custom firstname translation"
       last_name_kana: "Your custom lastnamekana translation"
       first_name_kana: "Your custom firstnamekana translation"
+      product_name: "Your custom product name translation"
+
 
